# sys_api

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  Dockerfile.prod  README.md  alembic.ini  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 84f3e71da89b_add_refresh_tokens_table.py  f4f2d2946fec_initial_schema.py  fe1e46782560_add_invoice_snapshot_fields.py
app/: __init__.py  config.py  main.py
app/application/: __init__.py
app/application/audit/: __init__.py
app/application/auth/: __init__.py  dto.py  get_me_query.py  login_command.py  register_command.py  unlock_command.py
app/application/clients/: __init__.py  dto.py  handlers.py
app/application/common/: __init__.py  tokens.py  uow.py
app/application/invoices/: __init__.py  dto.py  handlers.py
app/application/products/: __init__.py  dto.py  handlers.py
app/application/reports/: __init__.py  excel.py
app/application/taxes/: __init__.py  dto.py  handlers.py
app/application/users/: __init__.py  dto.py  handlers.py
app/core/: __init__.py  di.py  exceptions.py  pagination.py  rate_limit.py  security.py  sri.py
app/domain/: __init__.py
app/domain/exceptions/: __init__.py  (+2 more)
app/infrastructure/: __init__.py
app/presentation/: __init__.py  deps.py
app/scripts/: __init__.py  seed.py  seed_large.py  seed_realistic.py
tests/: conftest.py
tests/integration/: __init__.py  test_invoice_flow.py
tests/unit/: test_audit_log.py  test_cedula.py  test_excel_export.py  test_health.py  test_invoice_status.py  test_money.py  test_rate_limit.py  test_refresh_tokens.py  test_reports.py  test_smoke.py
(+75 files in other folders)
