[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sys_api"
version = "0.1.0"
description = "POS backend (FastAPI + SQLAlchemy + PostgreSQL)."
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "el Gentleman" }]

dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "psycopg2-binary>=2.9.9,<3.0.0",
  "alembic>=1.14.0,<2.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "passlib>=1.7.4,<2.0.0",
  "bcrypt>=4.0.0,<4.1.0",
  "aio-pika>=9.5.0,<10.0.0",
  "reportlab>=4.2.5,<5.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "openpyxl>=3.1.0,<4.0.0",
  "slowapi>=0.1.9,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "testcontainers[postgres,rabbitmq]>=4.8.0,<5.0.0",
  "ruff>=0.7.0,<1.0.0",
  "mypy>=1.13.0,<2.0.0",
  "faker>=30.0.0,<31.0.0",
  "slowapi>=0.1.9,<1.0.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
